# SolidDesigner

./: .gitmodules  CMakeLists.txt  README.md  copyDllToBuildDir.bat
.github/workflows/: c-cpp.yml
Demos/DemoDependencyPlugin/: CMakeLists.txt
Demos/DemoDependencyPlugin/Public/: SolidDemoDependencyPlugin.h
Demos/DemoPlugin/: CMakeLists.txt
Demos/DemoPlugin/Public/: SolidDemoPlugin.h
Designer/APP/: CMakeLists.txt  main.cpp
Designer/DB/SolidDesignerModel/: CMakeLists.txt  SolidDesignerModel.h
Designer/Data/: ApplicationConfig.xml  CommandsConfig.xml  FunctionAreaConfig.xml  SplashScreenConfig.xml  TitleBarConfig.xml  ToolBarConfig.xml  UiApplicationConfig.xml
Designer/Data/Plugins/: SolidDemoDependencyPlugin.plugin.xml  SolidDemoPlugin.plugin.xml  SolidDesignerCommand.plugin.xml
Designer/Data/Scripts/: generate_solid_designer_commands.py
Designer/Interaction/SolidDesignerInteraction/: CMakeLists.txt  SolidDesignerInteraction.h
Designer/UI/SolidDesignerCommand/: CMakeLists.txt  SolidDesignerCommand.h  SolidDesignerCommandComponent.cpp  SolidDesignerCommandComponent.h  SolidDesignerCommandFactory.cpp  SolidDesignerCommandFactory.h  SolidDesignerCommandRegister.cpp  SolidDesignerCommandRegister.h  SolidDesignerCommands.h
Designer/UI/SolidDesignerCommand/BaseCommands/: SolidBaseCommand.cpp  SolidBaseCommand.h
Designer/UI/SolidDesignerCommand/EditCommands/: SolidEditCopyCommand.cpp  SolidEditCopyCommand.h  SolidEditCutCommand.cpp  SolidEditCutCommand.h  SolidEditDeleteCommand.cpp  SolidEditDeleteCommand.h  SolidEditPasteCommand.cpp  SolidEditPasteCommand.h  SolidEditRedoCommand.cpp  SolidEditRedoCommand.h  SolidEditSelectAllCommand.cpp  SolidEditSelectAllCommand.h  SolidEditUndoCommand.cpp  SolidEditUndoCommand.h
Designer/UI/SolidDesignerCommand/GeneralCommands/: SolidFileNewCommand.cpp  SolidFileNewCommand.h  SolidFileOpenCommand.cpp  SolidFileOpenCommand.h  SolidFileSaveCommand.cpp  SolidFileSaveCommand.h
Designer/UI/SolidDesignerCommand/HelpCommands/: SolidHelpAboutCommand.cpp  SolidHelpAboutCommand.h  SolidHelpContentsCommand.cpp
Designer/UI/SolidDesignerCommand/ModelCommands/: SolidModelBlendCommand.cpp  SolidModelBlendCommand.h  SolidModelExtrudeCommand.cpp  SolidModelExtrudeCommand.h  SolidModelHelicalSweepCommand.cpp  SolidModelHelicalSweepCommand.h  SolidModelHoleCommand.cpp  SolidModelHoleCommand.h  SolidModelRevolveCommand.cpp  SolidModelRevolveCommand.h  SolidModelRotationalBlendCommand.cpp  SolidModelRotationalBlendCommand.h  SolidModelSweepCommand.cpp  SolidModelSweepCommand.h  SolidModelSweptBlendCommand.cpp  SolidModelSweptBlendCommand.h  SolidModelVolumeHelicalSweepCommand.cpp  SolidModelVolumeHelicalSweepCommand.h
Designer/UI/SolidDesignerUI/: CMakeLists.txt  SolidDesignerUI.h
